<resources>
    <string name="pref_key_save_input_images">pref_key_save_input_images</string>
    <string name="pref_key_use_sensor_alignment_when_failed">pref_key_use_sensor_when_failed</string>
    <string name="pref_key_use_brightness_correction">pref_key_use_brightness_correction</string>
    <string name="pref_key_sensor_correction_type">pref_key_sensor_correction_type</string>
    <string name="pref_key_sensor_correction_value_0">pref_key_sensor_correction_value_0</string>
    <string name="pref_key_sensor_correction_value_1">pref_key_sensor_correction_value_1</string>
    <string name="pref_key_sensor_correction_value_2">pref_key_sensor_correction_value_2</string>
    <string name="pref_key_use_sensor_threshold">pref_key_use_sensor_threshold</string>
    <string name="pref_key_motionless_threshold">pref_key_motionless_threshold</string>
    <string name="pref_key_use_preview_image">pref_key_use_previe_image</string>
    <string name="pref_key_use_ae_lock">pref_key_use_ae_lock</string>
    <string name="pref_key_use_awb_lock">pref_key_use_awb_lock</string>
    <string name="pref_key_zsl_mode_type">pref_key_zsl_mode</string>
    <string name="pref_key_save_output_type">pref_key_save_output_type</string>
    <string name="app_name">Camera</string>
    <string name="video_camera_label">Camcorder</string>
    <string name="details_ms">%1$02d:%2$02d</string>
    <string name="details_hms">%1$d:%2$02d:%3$02d</string>
    <string name="set_image">Set picture as</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="share_panorama">Share panorama</string>
    <string name="share_as_photo">Share as photo</string>
    <string name="deleted">Deleted</string>
    <string name="undo">UNDO</string>
    <string name="details">Details</string>
    <string name="close">Close</string>
    <string name="show_on_map">Show on map</string>
    <string name="rotate_left">Rotate left</string>
    <string name="rotate_right">Rotate right</string>
    <string name="edit">Edit</string>
    <string name="crop_action">Crop</string>
    <string name="trim_action">Trim</string>
    <string name="set_as">Set as</string>
    <string name="video_err">"Can't play video."</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="time">Time</string>
    <string name="location">Location</string>
    <string name="path">Path</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="orientation">Orientation</string>
    <string name="duration">Duration</string>
    <string name="mimetype">MIME type</string>
    <string name="file_size">File size</string>
    <string name="maker">Maker</string>
    <string name="model">Model</string>
    <string name="flash">Flash</string>
    <string name="aperture">Aperture</string>
    <string name="focal_length">Focal Length</string>
    <string name="white_balance">White balance</string>
    <string name="exposure_time">Exposure time</string>
    <string name="iso">ISO</string>
    <string name="unit_mm">mm</string>
    <string name="manual">Manual</string>
    <string name="auto">Auto</string>
    <string name="flash_on">Flash fired</string>
    <string name="flash_off">No flash</string>
    <string name="unknown">Unknown</string>
    <string name="try_to_set_local_album_available_offline">This item is stored locally and available offline.</string>
    <string name="please_wait">Please wait</string>
    <string name="camera_error_title">Camera error</string>
    <string name="cannot_connect_camera">"Can't connect to the camera."</string>
    <string name="camera_disabled">Camera has been disabled because of security policies.</string>
    <string name="wait">Please wait…</string>
    <string name="no_storage">Insert an SD card before using the camera.</string>
    <string name="preparing_sd">Preparing SD card…</string>
    <string name="access_sd_fail">"Couldn't access SD card."</string>
    <string name="time_lapse_title">Time lapse recording</string>
    <string name="capturing">Capturing</string>
    <string name="pref_camera_id_title">Choose camera</string>
    <string name="pref_camera_id_default">0</string>
    <string name="pref_camera_id_index_back">0</string>
    <string name="pref_camera_id_index_front">1</string>
    <string name="pref_camera_id_entry_back">Back</string>
    <string name="pref_camera_id_entry_front">Front</string>
    <string name="pref_camera_id_entry_back_value">0</string>
    <string name="pref_camera_id_entry_front_value">1</string>
    <string name="pref_camera_save_location_title">Save location</string>
    <string name="pref_camera_recordlocation_default">none</string>
    <string name="pref_camera_location_label">LOCATION</string>
    <string name="pref_camera_timer_title">Countdown timer</string>
    <string name="pref_camera_timer_default">0</string>
    <string name="pref_camera_timer_sound_default">@string/setting_on_value</string>
    <string name="pref_camera_timer_sound_title">Beep during countdown</string>
    <string name="setting_off">Off</string>
    <string name="setting_on">On</string>
    <string name="setting_auto">Auto</string>
    <string name="setting_off_value">off</string>
    <string name="setting_on_value">on</string>
    <string name="setting_auto_value">auto</string>
    <string name="setting_none_value">none</string>
    <string name="pref_video_quality_title">Video quality</string>
    <string name="pref_video_quality_large">large</string>
    <string name="pref_video_quality_medium">medium</string>
    <string name="pref_video_quality_small">small</string>
    <string name="pref_video_time_lapse_frame_interval_title">Time lapse</string>
    <string name="pref_video_time_lapse_frame_interval_default">500</string>
    <string name="pref_camera_settings_category">Camera settings</string>
    <string name="pref_camcorder_settings_category">Camcorder settings</string>
    <string name="pref_camera_picturesize_title">Picture size</string>
    <string name="pref_camera_picturesize_entry_large">Large</string>
    <string name="pref_camera_picturesize_entry_medium">Medium</string>
    <string name="pref_camera_picturesize_entry_small">Small</string>
    <string name="pref_camera_picturesize_default">large</string>
    <string name="pref_camera_focusmode_title">Focus mode</string>
    <string name="pref_camera_focusmode_entry_auto">Auto</string>
    <string name="pref_camera_focusmode_entry_infinity">Infinity</string>
    <string name="pref_camera_focusmode_entry_macro">Macro</string>
    <string name="pref_camera_focusmode_label_auto">AUTO</string>
    <string name="pref_camera_focusmode_label_infinity">INFINITY</string>
    <string name="pref_camera_focusmode_label_macro">MACRO</string>
    <string name="pref_camera_focusmode_default">continuous-picture</string>
    <string name="pref_camera_flashmode_default">off</string>
    <string name="pref_beauty_face_default">on</string>
    <string name="pref_face_cont_default">off</string>
    <string name="pref_camera_video_flashmode_default">off</string>
    <string name="pref_camera_hdr_plus_flashmode_default">off</string>
    <string name="pref_camera_flashmode_no_flash">no_flash</string>
    <string name="pref_camera_flashmode_title">Flash mode</string>
    <string name="pref_camera_flashmode_label">FLASH MODE</string>
    <string name="pref_camera_flashmode_entry_auto">Auto</string>
    <string name="pref_camera_flashmode_entry_on">On</string>
    <string name="pref_camera_flashmode_entry_off">Off</string>
    <string name="pref_camera_flashmode_label_auto">FLASH AUTO</string>
    <string name="pref_camera_flashmode_label_on">FLASH ON</string>
    <string name="pref_camera_flashmode_label_off">FLASH OFF</string>
    <string name="pref_camera_whitebalance_default">auto</string>
    <string name="pref_camera_whitebalance_title">White balance</string>
    <string name="pref_camera_whitebalance_label">WHITE BALANCE</string>
    <string name="pref_camera_whitebalance_entry_auto">Auto</string>
    <string name="pref_camera_whitebalance_entry_incandescent">Incandescent</string>
    <string name="pref_camera_whitebalance_entry_daylight">Daylight</string>
    <string name="pref_camera_whitebalance_entry_fluorescent">Fluorescent</string>
    <string name="pref_camera_whitebalance_entry_cloudy">Cloudy</string>
    <string name="pref_camera_whitebalance_label_auto">AUTO</string>
    <string name="pref_camera_whitebalance_label_incandescent">INCANDESCENT</string>
    <string name="pref_camera_whitebalance_label_daylight">DAYLIGHT</string>
    <string name="pref_camera_whitebalance_label_fluorescent">FLUORESCENT</string>
    <string name="pref_camera_whitebalance_label_cloudy">CLOUDY</string>
    <string name="pref_camera_scenemode_default">auto</string>
    <string name="pref_camera_scenemode_title">Scene mode</string>
    <string name="pref_camera_scenemode_entry_auto">Auto</string>
    <string name="pref_camera_scenemode_entry_hdr_plus">HDR+</string>
    <string name="pref_camera_scenemode_entry_hdr">HDR</string>
    <string name="pref_camera_scenemode_entry_turn_hdr_plus_on">HDR ON</string>
    <string name="pref_camera_scenemode_entry_turn_hdr_plus_off">HDR OFF</string>
    <string name="pref_camera_scenemode_entry_turn_hdr_plus_auto">HDR AUTO</string>
    <string name="pref_camera_scenemode_entry_turn_hdr_on">HDR ON</string>
    <string name="pref_camera_scenemode_entry_turn_hdr_off">HDR OFF</string>
    <string name="pref_camera_scenemode_entry_action">Action</string>
    <string name="pref_camera_scenemode_entry_night">Night</string>
    <string name="mode_camera">Camera</string>
    <string name="mode_video">Video</string>
    <string name="setting_back_camera_photo">Back camera photo</string>
    <string name="setting_back_camera_video">Back camera video</string>
    <string name="setting_front_camera_photo">Front camera photo</string>
    <string name="setting_front_camera_video">Front camera video</string>
    <string name="pref_category_resolution_quality">Resolution &amp; quality</string>
    <string name="setting_grid_lines">Grid Lines</string>
    <string name="setting_timer_text">Show timer menu</string>
    <string name="setting_camera_sound">Camera Sound</string>
    <string name="setting_front_shooting_flip">Front shooting flip</string>
    <string name="setting_location_text">Location</string>
    <string name="pref_title_setting">Setting</string>
    <string name="pref_title_save_input_images">Save input images</string>
    <string name="pref_title_use_sensor_alignment_when_failed">Use sensor</string>
    <string name="pref_title_usr_brightness_correction">Brightness correction</string>
    <string name="pref_title_sensor_correction_type">Sensor correction type</string>
    <string name="pref_title_use_sensor_threshold">Use sensor threshold</string>
    <string name="pref_title_motionless_threshold">Motionless threshold</string>
    <string name="pref_title_use_preview_image">Use preview image</string>
    <string name="pref_title_use_ae_lock">Auto exposure lock</string>
    <string name="pref_title_use_awb_lock">Auto white balance lock</string>
    <string name="pref_title_zsl_mode">zsl mode</string>
    <string name="pref_title_save_output_type">Output image type</string>
    <string name="CANCEL">Cancel</string>
    <string name="setting_preview_size">camera preview size</string>
    <string name="key_setting_preview_size">key_setting_preview_size</string>
    <string name="setting_picture_size">camera still size</string>
    <string name="key_setting_picture_size">key_setting_picture_size</string>
    <string name="pref_storage_select_default">0</string>
    <string name="pref_storage_select_title">Select Storage</string>
    <string name="pref_volum_key_function_title">Volume key control</string>
    <string name="pref_volum_key_function_default">photo</string>
</resources>