<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/app_name"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_title_setting" android:key="pref_category">
        <ListPreference android:enabled="true" android:title="@string/setting_preview_size" android:selectable="true" android:key="@string/key_setting_preview_size" android:defaultValue="0" android:dialogTitle="@string/setting_preview_size" android:negativeButtonText="@string/CANCEL" />
        <ListPreference android:enabled="true" android:title="@string/setting_picture_size" android:selectable="true" android:key="@string/key_setting_picture_size" android:defaultValue="0" android:dialogTitle="@string/setting_picture_size" android:negativeButtonText="@string/CANCEL" />
        <CheckBoxPreference android:enabled="true" android:title="@string/pref_title_save_input_images" android:selectable="true" android:key="@string/pref_key_save_input_images" android:defaultValue="0" />
        <CheckBoxPreference android:enabled="true" android:title="@string/pref_title_use_sensor_alignment_when_failed" android:selectable="true" android:key="@string/pref_key_use_sensor_alignment_when_failed" android:defaultValue="0" />
        <CheckBoxPreference android:enabled="true" android:title="@string/pref_title_usr_brightness_correction" android:selectable="true" android:key="@string/pref_key_use_brightness_correction" android:defaultValue="1" />
        <ListPreference android:enabled="true" android:entries="@array/entries_setting_sensor_correction_type" android:title="@string/pref_title_sensor_correction_type" android:selectable="true" android:key="@string/pref_key_sensor_correction_type" android:defaultValue="0" android:dialogTitle="@string/pref_title_sensor_correction_type" android:negativeButtonText="@string/CANCEL" android:entryValues="@array/entryvalues_setting_sensor_correction_type" />
        <com.morpho.app.panorama_gp.UseSensorThresholdPreference android:title="@string/pref_title_use_sensor_threshold" android:key="@string/pref_key_use_sensor_threshold" android:dialogTitle="@string/pref_title_use_sensor_threshold" />
        <com.morpho.app.panorama_gp.MotionlessThresholdPreference android:title="@string/pref_title_motionless_threshold" android:key="@string/pref_key_motionless_threshold" android:dialogTitle="@string/pref_title_motionless_threshold" />
        <CheckBoxPreference android:enabled="true" android:title="@string/pref_title_use_ae_lock" android:selectable="true" android:key="@string/pref_key_use_ae_lock" android:defaultValue="1" />
        <CheckBoxPreference android:enabled="true" android:title="@string/pref_title_use_awb_lock" android:selectable="true" android:key="@string/pref_key_use_awb_lock" android:defaultValue="1" />
        <CheckBoxPreference android:enabled="true" android:title="@string/pref_title_use_preview_image" android:selectable="true" android:key="@string/pref_key_use_preview_image" android:defaultValue="0" />
        <ListPreference android:enabled="true" android:entries="@array/entries_setting_zsl_mode_type" android:title="@string/pref_title_zsl_mode" android:selectable="true" android:key="@string/pref_key_zsl_mode_type" android:defaultValue="-1" android:dialogTitle="@string/pref_title_zsl_mode" android:negativeButtonText="@string/CANCEL" android:entryValues="@array/entryvalues_setting_zsl_mode_type" />
        <ListPreference android:enabled="true" android:entries="@array/entries_setting_save_output_type" android:title="@string/pref_title_save_output_type" android:selectable="true" android:key="@string/pref_key_save_output_type" android:defaultValue="1" android:dialogTitle="@string/pref_title_save_output_type" android:negativeButtonText="@string/CANCEL" android:entryValues="@array/entryvalues_setting_save_output_type" />
        <Preference android:title="Replay" android:key="setting_replay_key" />
        <Preference android:title="Back" android:key="setting_back_key" />
    </PreferenceCategory>
</PreferenceScreen>